# qr_task

./: CMakeLists.txt  README.md  main.py  main_no_ros.py  package.xml  qr_results.csv
launch/: qr_checker.launch
no_ros/: main_no_ros.py  qr_results.csv
no_ros/templates/: qr_checker_no_ros.html
scripts/: qr_checker_node.py
templates/: qr_checker.html  qr_checker_no_ros.html
www/static/: Detect.m4a
www/templates/: qr_checker.html
