<?xml version="1.0"?>
<package format="2">
  <name>qr_checker</name>
  <version>1.0.0</version>
  <description>Qr Monitoring Task Evaluation System</description>
  <maintainer email="petayyyymail@gmail.com">Petayyyy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-pyzbar</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>